<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="newClient">New Client</string>
    <string name="success">Success!</string>
    <string name="requiredField">Required Field!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="confirm_progress">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="postal_code">Postal Code</string>
    <string name="find_address">Find Address</string>
    <string name="patio">Patio</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="type_patio">Type patio</string>
    <string name="number">Number</string>
    <string name="loading">Loading...</string>
    <string name="welcome">Welcome!</string>
    <string name="user_or_password_not_vallid">User or password not vallid!</string>
    <string name="ok">Ok</string>
    <string name="try_again">Try again!</string>
    <string name="share">Share</string>
</resources>
